--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
 
                     <div class="col-4">
-                        <button type="button" class="btn btn-primary">
+                        <button type="button" class="btn btn-primary" id="find-me-button">
                             Trouvez-moi 🎯
                         </button>
                     
