--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Weather app</title>
@@ -63,10 +64,20 @@
                                 <span id="thermometer-icon"></span> <span id="today-temp"></span>
                             </div>
                             
-                            <span>
-                                °C | °F
-                            </span>
-                            
+                            <div class="unit-radio">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+                                    <label class="form-check-label" for="flexRadioDefault1">
+                                    °C 
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                    <label class="form-check-label" for="flexRadioDefault2">
+                                        °F
+                                    </label>
+                                </div>
+                            </div>
 
                         </div>
                         <div class="col-5 weather-icon">
