--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
                             <span id="date-mdy"></span><br>
                             <span id="time"></span><br>
                             <div class="thermo-temp">
-                                <span id="thermometer-icon"></span> <span id="today-temp"></span>
+                                <span id="thermometer-icon"></span> <span id="today-temp"></span> <span>°</span>
                             </div>
                             
                             <div class="unit-radio">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="celcius-unit" checked>
                                     <label class="form-check-label" for="flexRadioDefault1">
                                     °C 
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="fahrenheit-unit">
                                     <label class="form-check-label" for="flexRadioDefault2">
                                         °F
                                     </label>
