--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="forecast">
-                    <p class="next-five-days">5 prochains jours</p>
+                    <p class="next-five-days">Next 5 days</p>
                 
                     <div class="row" id="five-cards-meteo">
                         <div class="col">
