5 day forecast working

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
                         <div class="col-5 weather-icon">
                             <img 
                             src="" 
-                            alt="sun"
-                            id="icon-today">
+                            alt=""
+                            id="icon-today"
+                            width="200">
                             <br> 
                             <div id="description-temp"></div>
                         </div>
